--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
+Isoband = "f1662d9f-8043-43de-a69a-05efc1cc6ff4"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
@@ -29,6 +30,7 @@ Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 Packing = "19eb6ba3-879d-56ad-ad62-d5c202156566"
 PlotUtils = "995b91a9-d308-5afd-9ec6-746e21dbc043"
+PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
